# data-reg

./: Cargo.toml  LICENCE  README.md  release.toml
.github/workflows/: check.yaml
common/: Cargo.toml
common/src/: lib.rs  regex.rs
common/src/regex/: compiler.rs  dfa.rs  nfa.rs  vm.rs
common/src/regex/dfa/: compiler.rs
common/src/regex/nfa/: compiler.rs
common/src/regex/vm/: compiler.rs  inst.rs  runner.rs
common/tests/: begin.rs  begin_end.rs  captures.rs  end.rs  full_match.rs  is_match.rs  non-greedy.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: closure.rs  complex.rs  fn_ident.rs  tests.rs  try-build.rs
macro/tests/try-build-case/: begin.rs  closure.rs  complex.rs  concat.rs  end.rs  fn_ident.rs  group.rs  n_repeat.rs  non-greedy.rs  or.rs  some.rs  star.rs  zero_or_one.rs
runtime/: Cargo.toml
runtime/benches/: vec_reg_benchmark.rs
runtime/src/: lib.rs
runtime/tests/: captures.rs  full_match.rs  is_full_match.rs  is_match.rs  is_match_with_begin_end.rs  non-greedy.rs  readme.rs
src/: lib.rs  regex.rs
src/regex/: compiler.rs  nfa.rs
src/regex/nfa/: dfa_builder.rs
