[package]
name = "vec-reg-common"
description = "Shared models and logics for the vec-reg"
readme = "../README.md"
version = "0.7.1"
edition = "2021"
authors = ["Masato Sogame <poketo7878@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pocket7878/vec-reg"

[package.metadata.release]
tag = false

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
