[package]
name = "vec-reg-macro"
description = "Procedural macros for vec-reg"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
authors = ["Masato Sogame <poketo7878@gmail.com>"]
license-file = "../LICENCE"
repository = "https://github.com/pocket7878/vec-reg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
proc-macro2 = "1.0.43"
vec-reg-common = { version = "0.1.0", path = "../common" }

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = "1.0"
