[package]
name = "vec-reg"
description = "Generalized regex like pattern matching for vector"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
authors = ["Masato Sogame <poketo7878@gmail.com>"]
license-file = "../LICENCE"
repository = "https://github.com/pocket7878/vec-reg"

[dependencies]
vec-reg-macro = { version = "0.1.0", path = "../macro" }
vec-reg-common = { version = "0.1.0", path = "../common" }